Change Log for Kicad
Started 2007-June-11

Please add newer entries at the top, list the date and your name with 
email address.


2007-Aug-07 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+ pcbnew & common
  * More searching work.  Made HitTest() virtual.  Factored out a HitTest() 
    function for both class_module and class_pad from existing code.  
  * Embellished the Show() function for several of the classes.  Could be the
    basis of a possible future XML export, but with the native format being
    ascii already, this is of questionable value as an export.
  * Discovered a long time existing bug in class_module hit-testing. 
    Still need to understand it. It could just be an improperly formatted module.


2007-Aug-06 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+ pcbnew & common
    Started sketching out a new search architecture.  To learn more:
    look for "INSPECTOR" text in base_struct.h. 
    

2007-Aug-05 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+ pcbnew & common
  * Added some conditional DEBUG code for showing the pcb object tree in 
    simple XML format.   See class EDA_BaseStruct's new Show() function.
  * Changed the function name of Locate( const wxPoint& ref_pos ) to bool HitTest(..)
    in both class_text_mod and base_struct.
  * More beautification and commenting.


2007-Aug-04 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+ pcbnew
	Read-ability formatting, I am playing with a C++ beautifier called "uncrustify".
        I had to patch it and spent 2 days getting it configured.  Patch not 
        sent upstream yet.
    Fixed a bug in "display local ratsnest pad or module": if you had a small