@@ -5,6 +5,18 @@ Please add newer entries at the top, list the date and your name with
 email address.
 
 
+2007-aug-08 UPDATE   Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
+================================================================================
++ eeschema
+	bug in class_hierarchy_sheet.cpp.
+
++ pcbnew
+	small change in block commands:
+		rastnest was updated for each footprint, while moving footprints.
+		Now it is updated at the end of changes.
+	enhancements in block.cpp and connect.cpp
+	
+
 2007-Aug-07 UPDATE   Dick Hollenbeck <dick@softplc.com>
 ================================================================================
 + pcbnew & common
